--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,38 @@
 body {
-  color: red;
+}
+
+.my-team {
+  & {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  &__main-title {
+    flex: 0 0 40%;
+  }
+
+  &__description {
+    flex: 0 0 40%;
+  }
+
+  &__members {
+    margin-top: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  &__member-card {
+    flex: 0 0 30%;
+    padding: 0.5rem;
+    display: flex;
+
+    &__job-title {
+      writing-mode: vertical-lr;
+      margin-left: 0.5rem;
+    }
+  }
 }
