Repair style namespace

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -25,7 +25,7 @@ body {
     justify-content: space-around;
   }
 
-  &__member-card {
+  &__members__member-card {
     flex: 0 0 30%;
     padding: 0.5rem;
     display: flex;
