--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,3 @@
-body {
-}
-
 .my-team {
   width: 80%;
   margin: 0 auto;
@@ -23,7 +20,7 @@ body {
     justify-content: space-around;
   }
 
-  &__members__member-card {
+  .member-card {
     flex: 0 0 30%;
     padding: 0.5rem;
     display: flex;
